[gd_scene load_steps=8 format=2]

[ext_resource path="res://items/ItemBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Door.gd" type="Script" id=2]
[ext_resource path="res://assets/doorframe.png" type="Texture" id=3]
[ext_resource path="res://assets/door.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 22 )

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform vec4 color : hint_color = vec4(1.0);
uniform float width : hint_range(0, 10) = 1.0;
uniform int pattern : hint_range(0, 2) = 0; // diamond, circle, square
uniform bool inside = false;
uniform bool add_margins = true; // only useful when inside is false

void vertex() {
	if (add_margins) {
		VERTEX += (UV * 2.0 - 1.0) * width;
	}
}

bool hasContraryNeighbour(vec2 uv, vec2 texture_pixel_size, sampler2D texture) {
	for (float i = -ceil(width); i <= ceil(width); i++) {
		float x = abs(i) > width ? width * sign(i) : i;
		float offset;
		
		if (pattern == 0) {
			offset = width - abs(x);
		} else if (pattern == 1) {
			offset = floor(sqrt(pow(width + 0.5, 2) - x * x));
		} else if (pattern == 2) {
			offset = width;
		}
		
		for (float j = -ceil(offset); j <= ceil(offset); j++) {
			float y = abs(j) > offset ? offset * sign(j) : j;
			vec2 xy = uv + texture_pixel_size * vec2(x, y);
			
			if ((xy != clamp(xy, vec2(0.0), vec2(1.0)) || texture(texture, xy).a == 0.0) == inside) {
				return true;
			}
		}
	}
	
	return false;
}

void fragment() {
	vec2 uv = UV;
	
	if (add_margins) {
		vec2 texture_pixel_size = vec2(1.0) / (vec2(1.0) / TEXTURE_PIXEL_SIZE + vec2(width * 2.0));
		
		uv = (uv - texture_pixel_size * width) * TEXTURE_PIXEL_SIZE / texture_pixel_size;
		
		if (uv != clamp(uv, vec2(0.0), vec2(1.0))) {
			COLOR.a = 0.0;
		} else {
			COLOR = texture(TEXTURE, uv);
		}
	} else {
		COLOR = texture(TEXTURE, uv);
	}
	
	if ((COLOR.a > 0.0) == inside && hasContraryNeighbour(uv, TEXTURE_PIXEL_SIZE, TEXTURE)) {
		COLOR.rgb = inside ? mix(COLOR.rgb, color.rgb, color.a) : color.rgb;
		COLOR.a += (1.0 - COLOR.a) * color.a;
	}
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/color = Color( 1, 0, 0.701961, 1 )
shader_param/width = 0.0
shader_param/pattern = 1
shader_param/inside = false
shader_param/add_margins = true

[node name="Door" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( 0, 2 )
shape = SubResource( 6 )

[node name="Sprite" parent="." index="1"]
material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="Door" type="Sprite" parent="Sprite" index="0"]
position = Vector2( 0, 2 )
texture = ExtResource( 4 )

[node name="Spawn" type="Position2D" parent="." index="2"]

[node name="Timer" type="Timer" parent="." index="3"]
wait_time = 0.33
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Door_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Door_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
